package badadapter;

public class SquarePeg {
    private final double width;

    public SquarePeg(double width) { this.width = width; }

    public double getWidth() { return width; }
}
